# Coffin

./: Cargo.toml  README.md
shaders/: test0.coff
src/: ast.rs  ast_span.rs  debug_print.rs  error.rs  lexer.rs  lib.rs  main.rs  name_resolution.rs  parser.rs  pretty_print.rs  spirv_generation.rs  type_id.rs  type_resolution.rs  type_resolver.rs
src/name_resolution/: mod.rs  name_table.rs
src/parser/: error_node.rs  expr_parsing.rs  item_parsing.rs  mod.rs  spans_table.rs
src/spirv_generation/: mod.rs  spirv_ids_collections.rs  variable_spirv_ids.rs
src/type_resolution/: mod.rs  types.rs
tests/: insta_tests.rs  parser_tests.rs  shader_output_tests.rs  tests.rs
tests/insta_parser/: access.coff  as.coff  attr_tests.coff  bools.coff  expr_parsing.coff  if.coff  let_and_ident.coff  multiple_functions_one_error.coff  parameter_and_return_test.coff  vector_init.coff
tests/insta_parser_spans/: assign.coff  function_call.coff  simple.coff  uniform_and_fun.coff
tests/insta_parser_variables/: basic.coff
tests/insta_types/: fun_params.coff  fun_return.coff  if.coff  test.coff  types.coff  types_errors.coff  unif.coff  vector_init.coff  vectors.coff
tests/insta_variables/: basic.coff  if.coff  unifs.coff
tests/shaders/: test.coff  test0.coff  test1.coff  test2.coff  test4.coff
tests/snapshots/: insta_tests__insta@assign.coff.snap  insta_tests__insta@attr_tests.coff.snap  insta_tests__insta@basic.coff.snap  insta_tests__insta@expr_parsing.coff.snap  insta_tests__insta@function_with_blocks.coff.snap  parser_tests__insta@let.coff.snap  (+62 more)
vulkan_tests/: Cargo.toml
(+1 files in other folders)
