[package]
name = "coffin2"
version = "0.1.0"
authors = ["Michal Gniadek <mgniadek@interia.pl>"]
edition = "2018"

[dependencies]
logos = "0.12.0"
structopt = "0.3"
codespan-reporting = "0.11.1"
rspirv = "0.7"
spirv-tools = "0.4.0"
lasso = "0.5.0"
thiserror = "1.0.24"

[dev-dependencies]
insta = { version = "1.7.0", features = ["glob"] }